central_server/k8s/pacman-central.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pacman-central
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pacman-central
  template:
    metadata:
      labels:
        app: pacman-central
    spec:
      volumes:
        - name: kubeconfig-volume
          configMap:
            name: kubeconfig-files
      containers:
        - name: pacman-central
          image: clairegregg/pacman-central:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: kubeconfig-volume
              mountPath: "/etc/kubeconfigs"
              readOnly: true
---
apiVersion: v1
kind: Service
metadata:
  name: pacman-central
spec:
  selector:
    app: pacman-central
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
